<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                    http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ru.shikhovtsev</groupId>
  <artifactId>OtusJavaHW</artifactId>
  <version>${revision}</version>

  <packaging>pom</packaging>

  <developers>
    <developer>
      <name>Ilya Shikhovtsev</name>
    </developer>
  </developers>

  <modules>
    <module>L01-maven</module>
    <module>L02-shade</module>
    <module>L03-arraylist</module>
    <module>L04-collection</module>
    <module>L05-qa</module>
    <module>L06-gc</module>
    <module>L07-remotedebug</module>
    <module>L08-bytecodes</module>
      <module>L09-annotations</module>
  </modules>

  <properties>
    <!--region General-->
    <exec.mainClass>ru.shikhovtsev.HelloOtus</exec.mainClass>
    <revision>2019-09-SNAPSHOT</revision>
    <java.version>12</java.version>
    <minimal.maven.version>3.5.0</minimal.maven.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!--endregion-->

    <!--region BOMs-->
    <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
    <!--endregion-->

    <!--region Libs-->
    <lombok.version>1.18.10</lombok.version>
    <com.google.guava.version>28.1-jre</com.google.guava.version>
    <commons-io.version>2.6</commons-io.version>
    <jmh.version>1.21</jmh.version>
    <jol-core.version>0.9</jol-core.version>
    <asm.version>7.2</asm.version>
    <!--endregion-->

    <!--region Plugins-->
    <lombok-maven-plugin.version>1.18.8.1</lombok-maven-plugin.version>

    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
    <maven-assembly-plugin.descriptorSuffix>jar-with-dependencies</maven-assembly-plugin.descriptorSuffix>
    <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
    <!--endregion-->
  </properties>

  <dependencyManagement>
    <dependencies>
      <!--region BOMs-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!--endregion-->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <!--region Libs-->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${com.google.guava.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jol</groupId>
        <artifactId>jol-core</artifactId>
        <version>${jol-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm</artifactId>
        <version>${asm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm-commons</artifactId>
        <version>${asm.version}</version>
      </dependency>
      <!--endregion-->
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven-assembly-plugin.version}</version>
          <configuration>
            <descriptorRefs>
              <descriptorRef>${maven-assembly-plugin.descriptorSuffix}</descriptorRef>
            </descriptorRefs>
            <archive>
              <manifest>
                <mainClass>${exec.mainClass}</mainClass>
              </manifest>
            </archive>
          </configuration>
          <executions>
            <execution>
              <id>make-assembly</id>
              <phase>package</phase>
              <goals>
                <goal>single</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${maven-shade-plugin.version}</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
              <configuration>
                <transformers>
                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                    <mainClass>ru.shikhovtsev.shade.Main</mainClass>
                  </transformer>
                </transformers>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <argLine>--enable-preview</argLine>
            <includes>
              <include>**/Test*.java</include>
              <include>**/*Test.java</include>
              <include>**/*Tests.java</include>
              <include>**/*TestCase.java</include>
            </includes>
            <properties>
              <excludeTags>slow</excludeTags>
            </properties>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok-maven-plugin</artifactId>
          <version>${lombok-maven-plugin.version}</version>
          <executions>
            <execution>
              <phase>generate-sources</phase>
              <goals>
                <goal>delombok</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.0.1</version>
      </plugin>
    </plugins>
  </build>
</project>
